--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Hello,welcome to my website</h1>
-        <h2>HELLO INTERNET</h2>
+        <h2 style="color:blue;">HELLO INTERNET</h2>
     </body>
 </html>
