--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>Git</title>
     </head>
     <body>
-        <h1>Hello,welcome to my website!</h1>
-        <h2 style="color:blue;">HELLO INTERNET!</h2>
+        <h1>Hello,welcome to my website</h1>
+        <h2 style="color:blue;">HELLO INTERNET</h2>
     </body>
 </html>
