--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <title>Git</title>
+        <style>
+            h1{
+                color: blue;
+            }
+        </style>
     </head>
     <body>
         <h1>Hello,welcome to my website</h1>
