--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>Git</title>
         <style>
             h1{
-                color: blue;
+                color: green;
             }
         </style>
     </head>
