--- a/hello.html
+++ b/hello.html
@@ -4,11 +4,10 @@
         <title>Git</title>
         <style>
             h1{
-                color: blue;
+                color: red;
             }
         </style>
     </head>
     <body>
         <h1>Hello,welcome to my website</h1>
-        <h2>test!!!</h2>
 </html>
